Styling for mobile button text size to prevent multi row text cutoff

--- a/style.css
+++ b/style.css
@@ -58,3 +58,7 @@ input:disabled {
   font-family: 'Shadows Into Light', serif;
   font-size: 36pt;
 }
+
+@media only screen and (max-width: 600px) {
+  button { font-size: 14pt; }
+}
